--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,8 +25,8 @@
     "**/.idea": true
   },
   "editor.codeActionsOnSave": {
-    "source.fixAll.stylelint": true,
-    "source.fixAll.eslint": true
+    "source.fixAll.stylelint": false,
+    "source.fixAll.eslint": false
   },
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
